tweak and test all possible sass options

--- a/learning-grunt/v5/assets/sass/project/_project-styles.scss
+++ b/learning-grunt/v5/assets/sass/project/_project-styles.scss
@@ -2,7 +2,11 @@
 
 
 // This is where you will build your main stylesheet. Below is just an example of how you could break it up - REMOVE THIS LINE
-
+.grunt {
+	text-align: center;
+	color: red;
+	font-weight: bold;
+}
 
 // Buttons
 //@import 'partials/_buttons.scss';
